[gd_scene load_steps=19 format=3 uid="uid://dibr1kkw0rbov"]

[ext_resource type="Script" path="res://screens/activities/01/tasks/sound_m.gd" id="1_ohxc1"]
[ext_resource type="PackedScene" uid="uid://due721y15oqyk" path="res://components/next_button.tscn" id="2_f3umd"]
[ext_resource type="Texture2D" uid="uid://pexulgj4lso1" path="res://assets/images/boy/face.png" id="2_t2vam"]
[ext_resource type="Texture2D" uid="uid://b6bj2h26rmxvh" path="res://assets/images/boy/hand.png" id="3_n7vss"]
[ext_resource type="Texture2D" uid="uid://b7fmyke1u6cd6" path="res://assets/images/boy/smile.png" id="4_0bc0j"]
[ext_resource type="Texture2D" uid="uid://cqern3jdehruy" path="res://assets/images/boy/mouth-m.png" id="5_mfmw0"]
[ext_resource type="Texture2D" uid="uid://c6f5fovb4x10" path="res://assets/images/boy/vibration.png" id="6_hta7l"]
[ext_resource type="Texture2D" uid="uid://d1l0opgfx1qsm" path="res://assets/images/boy/vibration_02.png" id="7_5acem"]
[ext_resource type="FontFile" uid="uid://cogryc0bfmmla" path="res://assets/fonts/Poppins-SemiBold.ttf" id="8_khm5b"]
[ext_resource type="Texture2D" uid="uid://ddfji3imqkx48" path="res://assets/ui/replay.png" id="9_78ggs"]
[ext_resource type="AudioStream" uid="uid://doqbt0tju38te" path="res://assets/voices/01/toca_nariz_labios_pronuncia.mp3" id="9_rqk7r"]
[ext_resource type="Texture2D" uid="uid://s6lj0pfjugw4" path="res://assets/ui/replay_press.png" id="10_0ywt2"]
[ext_resource type="AudioStream" uid="uid://idgbdvr8heuj" path="res://assets/voices/phonemes/m.mp3" id="10_gay2t"]
[ext_resource type="AudioStream" uid="uid://b1ijla67iq3yh" path="res://assets/voices/01/sentir_vibracion_nariz.mp3" id="12_ulmnj"]

[sub_resource type="Animation" id="Animation_pdxmr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container/Face/MouthM:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container/Face/ShakeEffect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Container/PhonemeM:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Container/Face/Hand:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Container/Face/Hand:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.406347]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Container/Face/Hand:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-106, 427)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Container/Face/Smile:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Container/LetterM:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_diax8"]
resource_name = "intro"
length = 7.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(0.435275, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container/Face/Hand:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container/Face/Hand:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8, 1.8),
"transitions": PackedFloat32Array(0.34151, 1),
"update": 0,
"values": [-0.406347, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Container/Face/Hand:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.8, 1.8),
"transitions": PackedFloat32Array(0.378929, 1),
"update": 0,
"values": [Vector2(-106, 427), Vector2(4, 427)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Container/Face/Smile:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.9, 2.3, 4.7, 4.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Container/Face/MouthM:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(2.3, 2.7, 4.7, 4.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Container/Face/ShakeEffect:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(4, 4.5, 4.9, 5.9, 6.4, 6.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Container/LetterM:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(3.7, 4, 4.9, 5.2, 5.6, 5.9, 6.8, 7.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Container/PhonemeM:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(3.7, 4, 4.5, 4.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/9/type = "audio"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Narrator")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_rqk7r")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("12_ulmnj")
}],
"times": PackedFloat32Array(0.5, 4.8)
}
tracks/9/use_blend = true
tracks/10/type = "audio"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Phoneme")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("10_gay2t")
}],
"times": PackedFloat32Array(4)
}
tracks/10/use_blend = true
tracks/11/type = "method"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath(".")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_show_replay_button"
}]
}

[sub_resource type="Animation" id="Animation_f186j"]
resource_name = "outro"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NextButton")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hidden_button"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c830u"]
_data = {
"RESET": SubResource("Animation_pdxmr"),
"intro": SubResource("Animation_diax8"),
"outro": SubResource("Animation_f186j")
}

[node name="SoundM" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ohxc1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -640.0
offset_right = 360.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2

[node name="Face" type="TextureRect" parent="Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = -425.0
offset_right = 252.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(252, 296)
texture = ExtResource("2_t2vam")

[node name="Hand" type="Sprite2D" parent="Container/Face"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-106, 427)
rotation = -0.406347
scale = Vector2(0.88, 0.88)
texture = ExtResource("3_n7vss")
offset = Vector2(134, 9)

[node name="Smile" type="Sprite2D" parent="Container/Face"]
position = Vector2(257, 490)
texture = ExtResource("4_0bc0j")

[node name="MouthM" type="Sprite2D" parent="Container/Face"]
modulate = Color(1, 1, 1, 0)
position = Vector2(254, 497)
texture = ExtResource("5_mfmw0")

[node name="ShakeEffect" type="Node2D" parent="Container/Face"]
modulate = Color(1, 1, 1, 0)
position = Vector2(248, 409)

[node name="Vibration" type="Sprite2D" parent="Container/Face/ShakeEffect"]
position = Vector2(-1, 0)
texture = ExtResource("6_hta7l")
offset = Vector2(-26, 30)

[node name="Vibration02" type="Sprite2D" parent="Container/Face/ShakeEffect"]
position = Vector2(-1, -1)
texture = ExtResource("7_5acem")
offset = Vector2(42, -19)

[node name="LetterM" type="Label" parent="Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.5
offset_top = 183.0
offset_right = 78.5
offset_bottom = 397.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("8_khm5b")
theme_override_font_sizes/font_size = 150
text = "m"

[node name="PhonemeM" type="Label" parent="Container"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = 183.0
offset_right = 225.0
offset_bottom = 397.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(222, 107)
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("8_khm5b")
theme_override_font_sizes/font_size = 150
text = "Mmm"
vertical_alignment = 1
clip_text = true

[node name="ReplayButton" type="TextureButton" parent="Container"]
layout_mode = 0
offset_left = 553.0
offset_top = 113.0
offset_right = 657.0
offset_bottom = 220.0
pivot_offset = Vector2(52, 53)
texture_normal = ExtResource("9_78ggs")
texture_pressed = ExtResource("10_0ywt2")
stretch_mode = 3

[node name="NextButton" parent="." instance=ExtResource("2_f3umd")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 69.0
offset_top = 1141.0
offset_right = 651.0
offset_bottom = 1231.0
grow_horizontal = 1
grow_vertical = 1

[node name="Narrator" type="AudioStreamPlayer" parent="."]
volume_db = 5.0
bus = &"Narrator"

[node name="Phoneme" type="AudioStreamPlayer" parent="."]
volume_db = 8.0
bus = &"Narrator"

[node name="TaskAnimator" type="AnimationPlayer" parent="."]
autoplay = "intro"
libraries = {
"": SubResource("AnimationLibrary_c830u")
}

[connection signal="button_up" from="Container/ReplayButton" to="." method="_on_replay_button"]
[connection signal="button_up" from="NextButton" to="." method="_on_next_button"]
